# wesnoth

./: CMakeLists.txt
cmake/: FindSDL2.cmake  Findsdl2-image.cmake
conan/: CMakeLists.txt  conanfile.txt
src/: CMakeLists.txt  wesnoth.cpp
